Fix radio collapses (fix #112)

--- a/resources/assets/sass/components/form/_Radio.scss
+++ b/resources/assets/sass/components/form/_Radio.scss
@@ -14,6 +14,7 @@
     border: 2px solid $ui-05;
     height: rem(18px);
     width: rem(18px);
+    min-width: rem(18px);
     margin-right: rem(10px);
   }
 }
